# bouncing-ball

./: .gitignore  CMakeLists.txt  build.sh  main.cpp  makefile  readme.md
include/: ball.hpp
src/: main.cpp  updateBall.cpp
